# mapBuildingWithFocusPoint

./: .gitignore  CMakeLists.txt  Develop-Plan.md  Flowchart.pptx  README.md  build.sh  scan_points.txt
.github/workflows/: build_test_formatting.yml  mapbufo_ci.yml
HybridAStar/: CMakeLists.txt
HybridAStar/include/: Config.h  GridAStar.h  HybridAStar.h  Vehicle.h  VehicleCollisionCheck.h  common.h
HybridAStar/include/Reeds-Shepp/: CCSC.h  CCSCC.h  CSC.h  FormularList.h  RSPathElem.h
HybridAStar/plot/: collisionCheck.py  plot.py  plotPath.py
ReedsShepp/: CCC.h  CCCC.h  CMakeLists.txt  CalcShortDist.h  Config.h  FormularList.h  GridAStar.h  HybridAStar.h  Node.h  PathFunction.h  RSPath.h  VehicleCollisionCheck.h  main.cpp  path.txt  plotPath.py
ReedsShepp/matlab/: CalcShortDist.m  FormularList.m  PathFunction.m  RSPath.m  RSPathElem.m  main.m
include/: common.h  lidar_sim.h  map.h  map_simulator.h  path_planning.h  point.h  robot.h
main/: CMakeLists.txt  main.cpp
maps/: scenario_01.txt  scenario_02.txt  scenario_03.txt
src/: CMakeLists.txt  lidar_sim.cpp  main.cpp  map.cpp  mapSimulator.cpp  mapSimulator.h  map_simulator.cpp  map_simulator.h  path_planning.cpp  robot.cpp
src/mapbufo/: CMakeLists.txt  package.xml  rviz_map.rviz
src/mapbufo/include/mapbufo/: common.h  communication_interface.h  lidar_sim.h  map.h  path_planning.h  pid_controller.h  point.h  robot.h
src/mapbufo/launch/: mapbufo_node.launch
src/mapbufo/main/: main.cpp
src/mapbufo/maps/: 100x100map.txt
src/mapbufo/param/: parameter.yaml
src/mapbufo/rosbags/: standing_stably.bag
src/mapbufo/src/: communication_interface.cpp  map.cpp  path_planning.cpp  pid_controller.cpp  robot.cpp  transform_support.cpp
src/simulator/: lidar_sim.cpp  map_simulator.cpp
